--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "next": "16.1.6",
+    "next-intl": "^4.8.3",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
