--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "leaflet": "^1.9.4",
@@ -50,6 +51,7 @@
     "next-intl": "^4.8.3",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
+    "react-day-picker": "^8.10.1",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.54.1",
     "react-leaflet": "^5.0.0",
